--- a/public/stylesheets/codecademy/sunnyMenu.css
+++ b/public/stylesheets/codecademy/sunnyMenu.css
@@ -9,6 +9,14 @@ body p {
     font-size: 16px;
 }
 
+.main .container{
+    background:#fff;
+    z-index: 0;
+    margin: -70px auto 80px;
+    padding:80px 10px 80px 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+}
+
 .header h1 {
     background: yellow;
     border-radius: 100%;
@@ -36,14 +44,6 @@ body p {
     padding: 0;
 }
 
-.main .container {
-    background:#fff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-    margin: -70px auto 80px;
-    padding: 80px;
-    z-index: 0;
-}
-
 h1 {
     color: #444;
     font-family: 'Oswald', sans-serif;
@@ -69,7 +69,11 @@ h3 {
     text-transform: uppercase;
 }
 
-.price p {
+.name{
+    margin-top: 0px;
+}
+
+.price{
     font-family: 'Oswald', sans-serif;
     font-size: 20px;
     font-style: normal;
