--- a/views/codecademy/FavWrestlemania.ejs
+++ b/views/codecademy/FavWrestlemania.ejs
@@ -36,18 +36,18 @@
         <div class="main" ng-controller="favWrestlemaniaController">
           <div class="container">
     
-            <h1>{{ title }}</h1>
-            <h2 class='text-center'>{{ promo }}</h2>
+            <h1 ng-bind='::title'></h1>
+            <h2 ng-bind='::promo' class='text-center'></h2>
             <div class='row'>
                <div ng-repeat="product in products" class=" col-xs-12 col-md-6"> 
                   <div class="thumbnail"> 
                     <a href='{{product.link}}'><img ng-src="{{ product.cover }}"></a>
-                    <a href='{{product.link}}'><p class="title text-center">{{ product.name }}</p></a>
-                    <p class="order">{{ product.order}}</p> 
-                    <p class="date text-center">{{ product.pubdate | date }}</p>
+                    <a href='{{product.link}}'><p ng-bind='::product.name' class="title text-center"></p></a>
+                    <p ng-bind='::product.order' class="order"></p> 
+                    <p ng-bind='product.pubdate|date' class="date text-center"></p>
                     <div class="rating"> 
-                      <p class="likes" ng-click="plusOne($index)">+{{product.likes}} </p>
-                      <p class="likes" ng-click="minusOne($index)">-{{product.dislikes}} </p>
+                      <p ng-bind="'+'+ product.likes" class="likes" ng-click="plusOne($index)"></p>
+                      <p ng-bind="'-'+product.dislikes" class="likes" ng-click="minusOne($index)"></p>
                     </div><!--End of ratings-->
                   </div> <!--End of thumbnail-->
                 </div><!--End of col-md-6--> 
