--- a/views/codecademy/LuchaUnderground.ejs
+++ b/views/codecademy/LuchaUnderground.ejs
@@ -40,9 +40,9 @@
                 <img ng-src="{{program.series_img}}"/>
             </div><!--End of col-md-3-->
             <div class="col-sm-8 col-md-6">
-              <h1 class="series">{{program.series}}</h1>
-              <h2 class="episode">{{program.episode}}</h2>
-              <p class="description">{{program.description}}</p>
+              <h1 ng-bind='::program.series' class="series"></h1>
+              <h2 ng-bind='::program.episode' class="episode"></h2>
+              <p ng-bind='::program.description' class="description"></p>
             </div><!--End of col-md-6-->
             <div class="col-sm-12 col-md-3">
               <ul class="list-group">
