--- a/views/codecademy/Armando.ejs
+++ b/views/codecademy/Armando.ejs
@@ -48,10 +48,10 @@
           </div><!-- Enf of row -->
         </div><!-- End of container -->
       </div><!--End of header -->
-      <div class='main' ng-controller="armandoController">
+      <div class='main' ng-controller="armandoController as main">
         <div class='container'>
           <div class='row'>
-              <div ng-repeat="photo in photos">
+              <div ng-repeat="photo in main.photos">
                  <armando-Profile listing="photo"></armando-Profile> 
               </div>
           </div><!--End of row-->
