--- a/views/codecademy/CONCACAFR5.ejs
+++ b/views/codecademy/CONCACAFR5.ejs
@@ -31,9 +31,9 @@
                 <h1 class='text-center'>Guess the Score</h1>
             </div><!--End of container-->
           </div><!--End of header-->
-          <div class='main' ng-controller='concacafController'>
+          <div class='main' ng-controller='concacafController as main'>
             <div class='container'>
-                <div id='match' class="row" ng-repeat="match in matches">
+                <div id='match' class="row" ng-repeat="match in main.matches">
                    <div id='matchInfo' class='col-xs-12 col-sm-3'>
                        <div class='row'>
                            <div class='col-xs-5 col-sm-12'>
@@ -49,8 +49,8 @@
                    <div id='matchTeams' class='col-xs-12 col-sm-9'>
                        <div class='row'>
                            <div class='col-xs-2 col-sm-1'>
-                                    <button class='btn' ng-click="addHome($index)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
-                                    <button class='btn' ng-click="minusHome($index)"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
+                                    <button class='btn' ng-click="main.addHome($index)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                                    <button class='btn' ng-click="main.minusHome($index)"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
                            </div><!--End of col-xs-2-->
                            <div class='col-xs-6 col-sm-3'>
                                <img ng-src="{{match.homeFlag_img}}" width="100px" height="60px">
@@ -60,8 +60,8 @@
                               <span>{{match.homeCount}}</span><span>-</span><span>{{match.awayCount}}</span>
                            </div><!--End of col-xs-2-->
                            <div class='col-xs-2 col-sm-1'>
-                                <button class='btn' ng-click="addAway($index)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
-                                <button class='btn' ng-click="minusAway($index)"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
+                                <button class='btn' ng-click="main.addAway($index)"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+                                <button class='btn' ng-click="main.minusAway($index)"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button>
                            </div><!--End of col-xs-2-->
                            <div class='col-xs-6 col-sm-3'>
                                <img ng-src="{{match.awayFlag_img}}" width="100px" height="60px">
