--- a/views/codecademy/SunnyMenu.ejs
+++ b/views/codecademy/SunnyMenu.ejs
@@ -30,18 +30,18 @@
         <h1><span>Sunny</span><span>Side Up</span></h1>
     </div>
     
-    <div class="main" ng-controller="sunnyController">
+    <div class="main" ng-controller="sunnyController as main">
         <div class="container">
             <div id='menuDiv'>
               <div class='row'>
                 <div class='col-xs-12'>
-                  <h1>Specials for {{ today | date }}</h1>
+                  <h1>Specials for {{ main.today | date }}</h1>
                 </div><!--End of col-xs-12-->
               </div><!--End of row-->
               <div class='row'>
                 <div class='col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2'>
                   <h2>Appetizers</h2>
-                  <div class="media" ng-repeat="appetizer in appetizers">
+                  <div class="media" ng-repeat="appetizer in main.appetizers">
                     <div class="media-left">
                         <img class="media-object" ng-src="{{appetizer.img}}" height="100px" width="100px">
                     </div><!--End of media-left-->
@@ -62,7 +62,7 @@
                <div class='row'>
                  <div class='col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2'>
                     <h2>Main Dishes</h2>
-                    <div class="media" ng-repeat="main in mains">
+                    <div class="media" ng-repeat="main in main.mains">
                       <div class="media-left">
                           <img class="media-object" ng-src="{{main.img}}" height="100px" width="100px">
                       </div><!--End of media-left-->
@@ -83,7 +83,7 @@
                <div class='row'>
                  <div class='col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2'>
                     <h2>Extras</h2>
-                    <div class="media" ng-repeat="extra in extras">
+                    <div class="media" ng-repeat="extra in main.extras">
                       <div class="media-left">
                           <img class="media-object" ng-src="{{extra.img}}" height="100px" width="100px">
                       </div><!--End of media-left-->
