--- a/views/codecademy/SuggestionBox.ejs
+++ b/views/codecademy/SuggestionBox.ejs
@@ -8,47 +8,24 @@
     <title><%= title %></title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
-
+    <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--Custom-->
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel='stylesheet' href='/stylesheet/codecademy/suggestionBox.css'></link>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!--Custom CSS-->
-    <link rel="stylesheet" href='/stylesheets/codecademy/suggestionBox.css'>
-    <!-- Latest compiled and minified JavaScript -->
-    <!--JQuery-->
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <!--Bootstrap-->
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src='/bower_components/angular/angular.min.js'></script>
-    <script src="/bower_components/angular-route/angular-route.js"></script>
-  </head>
-    <body ng-app="codecademy">
-      <header>
-        <div class='row'>
-          <div class='col-xs-12'>
-            <div class='headerBox'>
-              <h1 class='text-center no-pad'>We the People</h1>
-            </div><!--End of headerBox-->
-          </div><!--End of col-xs-12-->
-        </div><!--End of row-->
-      </header>
-      <div class='main' ng-controller="suggestionHomeController">
-        <div class='container'>
-          <div ng-view></div>
-        </div><!--End of container-->
-      </div><!--End of main-->
-
-    <!--Module-->
-    <script src="/ang.js"></script>
-    <!--Controller-->
-    <script src='/Controllers/codecademy/suggestionHomeController.js'></script>
-    <script src='/Controllers/codecademy/suggestionController.js'></script>
-    <!--Services-->
-    <script src='/Services/codecademy/suggestions.js'></script>
-    <!--Directives-->
-    </body>
+  </body>
 </html>
