--- a/views/codecademy/SuggestionBox.ejs
+++ b/views/codecademy/SuggestionBox.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app='suggestionBox'>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,8 @@
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--Custom-->
     <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
-    <link rel='stylesheet' href='/stylesheet/codecademy/suggestionBox.css'></link>
+    <link href="https://fonts.googleapis.com/css?family=Niconne" rel="stylesheet">
+    <link rel='stylesheet' href='/stylesheets/codecademy/suggestionBox.css'></link>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,12 +21,100 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <header>
+      <div class='container-fluid'>
+        <div class='row'>
+          <div class='col-xs-12'>
+            <div class='headerDiv'>
+              <h1 class='text-center'>We the People</h1>
+            </div><!--End of headerDiv-->
+          </div><!--End of col-xs-12-->
+        </div><!--End of row-->
+      </div><!--End of container-fluid-->
+    </header>
+    
+    <div class='main'>
+      <div class='container-fluid'>
+        <ng-view></ng-view>
+      </div><!--End of container-fluid-->
+    </div><!--End of main-->
+    
+    <script type='text/ng-template' id='/home.html'>
+      <form id='idea' ng-submit="addSuggestion()" style="margin-top: 50px">
+        <h3> Submit Your Suggestion </h3>
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Great ideas here" ng-model="title"></input>
+        </div>
+        <button type="submit" class="btn btn-danger">Suggest</button>
+      </form>
+      <div class='row' ng-controller='suggestionController as sug'>
+          <div class='col-xs-12 col-sm-6 col-md-4'  ng-repeat="post in sug.posts | orderBy:'-upvotes'">
+              <div class='ideaBox'>
+                  <div class='avatar'>
+                      <img  class='img-responsive center-block' src="{{post.avatar}}"></img>
+                  </div><!-- End of avatar -->
+                  <div class='ideaTitle'>
+                      <h3 class='no-pad text-center'>{{post.title}}</h3>
+                  </div><!--End of ideaTitle-->
+                  <div class='interfaceBox'>
+                      <i class="fa fa-2x fa-heart-o" ng-click="sug.upVote($index)"></i>
+                      <span class='upvotesCircle'>{{post.upvotes}}</span>
+                      <a class='btn btn-primary btn-xs pull-right' href="#/suggestion/{{$index}}">Comments</a>
+                  </div><!-- End of interfaceBox -->
+              </div><!-- End of ideaBox -->
+          </div><!-- End of col -->
+      </div><!--End of row -->
+    </script>
+    
+    <script type='text/ng-template' id='/suggestions.html'>
+      <div class='row' ng-controller='commentsController as comCtrl'>
+        <div class='col-xs-12'>
+            <div class='commentTitle'>
+                <h3 class='text-center'>{{comCtrl.post.title}}</h3>
+            </div><!--End of commentTitle-->
+        </div><!--End of col-->
+      </div><!--End of row-->
+      <div class='row' ng-repeat='comment in comCtrl.post.comments'>
+          <div class='col-xs-12 col-sm-10 col-sm-offset-1'>
+              <div class='commentContainer'>
+                  <div class='row'>
+                      <div class='col-xs-3 col-sm-2 col-md-1'>
+                          <div class='thumbsUp'>
+                              <i class="fa fa-thumbs-up" ng-click='comCtrl.upVote($index)'></i>
+                          <span>{{comment.upvotes}}</span>
+                          </div><!--End of thumbsUp-->
+                      </div><!--End of col-->
+                      <div class='col-xs-9 col-sm-10 col-md-11'>
+                          <div class='commentBody'>
+                              <span>{{comment.body}}</span>
+                          </div><!--End of commentBody-->
+                      </div><!--End of col-->
+                  </div><!--End of row-->
+              </div><!--End of commentContainer-->
+          </div><!--End of col-->
+      </div><!--End of row-->
+      <div class='row'>
+        <div class='col-xs-12'>
+          <form id='comment' ng-submit="addComment()" style="margin-top: 50px">
+            <h3> Submit Your Comment </h3>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Place comment here" ng-model="body"></input>
+            </div><!--End of form-group-->
+            <button type="submit" class="btn btn-danger">Suggest</button>
+          </form>
+        </div><!--End of col-->
+      </div><!--End of row-->
+    </script>
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src='/bower_components/angular/angular.min.js'></script>
+    <script src='/bower_components/angular-route/angular-route.min.js'></script>
+    <!--Module-->
+    <script src='/Modules/suggestion.module.js'></script>
+    <!--Controller-->
+    <script src='/Controllers/codecademy/suggestionsController.js'></script>
   </body>
 </html>
