--- a/views/freecodecamp/urlShortener.ejs
+++ b/views/freecodecamp/urlShortener.ejs
@@ -34,10 +34,10 @@
 			
 	 		<div class="exampleOutput">
 	 			<h2>Example creation output</h2>
-		 		<span class='bg-danger'>{ "original_url":"https://url-shortener-microservice-rawlejuglal.c9users.io/https://www.google.com", "short_url":"https://url-shortener-microservice-rawlejuglal.c9users.io/8170" }</span>
+		 		<span class='bg-danger'>{ "original_url":"https://url-shortener-microservice-rawlejuglal.c9users.io/https://www.google.com", "short_path":"https://url-shortener-microservice-rawlejuglal.c9users.io/s/8170" }</span>
 				<hgroup>
 					<h2>Usage:</h2>
-		 			<span class='bg-danger'>https://url-shortener-microservice-rawlejuglal.c9users.io/8170</span>
+		 			<span class='bg-danger'>https://url-shortener-microservice-rawlejuglal.c9users.io/s/8170</span>
 					<h2>Will redirect to:</h2>
 		 			<span class='bg-danger'>https://www.google.com/</span>
 				</hgroup>
