core(unixTimeStamp):created unix Time Stamp Converter

--- a/views/freecodecamp/fileMetaData.ejs
+++ b/views/freecodecamp/fileMetaData.ejs
@@ -3,7 +3,7 @@
 <html>
 
 	<head>
-		<title>Rawle's File Metadata Microservice</title>
+		<title><%= title %></title>
 		<!--Bootstrap-->
 		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<!--FONT AWESOME-->
