--- a/views/freecodecamp/isal.ejs
+++ b/views/freecodecamp/isal.ejs
@@ -5,12 +5,12 @@
 	<head>
 		<title><%= title %></title>
 		<!--Bootstrap-->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" 
-		integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<!--FONT AWESOME-->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css">
 		<!--Custom-->
-		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="/stylesheets/freecodecamp/isal.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
@@ -65,12 +65,9 @@
 		
 		
 		<!--JQuery-->
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
 		<!--Bootstrap-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" 
-		integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<!--AJAX (already provided through clementinejs)-->
-		<script type="text/javascript" src="common/ajax-functions.js"></script>
+		<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	</body>
 
 </html>
