feature(isal): added deprecation notice for viewers

--- a/views/freecodecamp/isal.ejs
+++ b/views/freecodecamp/isal.ejs
@@ -15,6 +15,10 @@
 
 	<body>
 		<div class="container">
+			<div class="alert alert-warning" role="alert">
+				<p>Bing Search API will be deprecated Dec 15, 2016. This project will no longer work and will need to be removed. If you are 
+				seeing this past that date please remind me to remove project by emailing me at <a href='mailto:rawledjuglal@gmail.com'>rawledjuglal@gmail.com</a></p>
+			</div><!--End of alert-->
 			<h1>FreeCodeCamp API Basejump: Image Search Abstraction Layer</h1>
 			<div class="userStories">
 				<h2>User stories:</h2>
