--- a/views/freecodecamp/Calculator.ejs
+++ b/views/freecodecamp/Calculator.ejs
@@ -18,12 +18,7 @@
     <![endif]-->
     <!--Custom CSS-->
     <link rel="stylesheet" href='/stylesheets/freecodecamp/calculator.css'>
-    <!-- Latest compiled and minified JavaScript -->
-    <!--JQuery-->
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <!--Bootstrap-->
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src='/bower_components/angular/angular.min.js'></script>
+    
   </head>
   <body>
       <div class='heading'>
@@ -164,7 +159,13 @@
               </div><!--End of row-->
           </div><!--End of container-->
       </div><!--End of calculatorDiv-->
+      <!-- Latest compiled and minified JavaScript -->
+    <!--JQuery-->
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <!--Bootstrap-->
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--<script src='/bower_components/angular/angular.min.js'></script>-->
     <!--Custom-->
-    <script src='/javascripts/freecodecamp/calculator.js'></script>
+    <script type='text/javascript' src='/javascripts/freecodecamp/calculator.js'></script>
   </body>
 </html>
