bugFix(portfolio):suggestionBox need ! added to route

--- a/views/codecademy/SuggestionBox.ejs
+++ b/views/codecademy/SuggestionBox.ejs
@@ -60,7 +60,7 @@
                     <div class='interfaceBox'>
                         <i class="fa fa-2x fa-heart-o" ng-click="sug.upVote($index)"></i>
                         <span class='upvotesCircle'>{{post.upvotes}}</span>
-                        <a class='btn btn-primary btn-xs pull-right' href="#/suggestion/{{$index}}">Comments</a>
+                        <a class='btn btn-primary btn-xs pull-right' href="#!/suggestion/{{$index}}">Comments</a>
                     </div><!-- End of interfaceBox -->
                 </div><!-- End of ideaBox -->
             </div><!-- End of col -->
