bugFix(portfolio):fixed html to reflect correct routes for urlShortener

--- a/views/freecodecamp/urlShortener.ejs
+++ b/views/freecodecamp/urlShortener.ejs
@@ -27,17 +27,16 @@
 	    	<div class="exampleUsage">
 	    		<h2>Example creation usage:</h2>
 					<ul>
-						<li><span class='bg-danger'>https://url-shortener-microservice-rawlejuglal.c9users.io/https://www.google.com</span></li>
-						<li><span class='bg-danger'>https://url-shortener-microservice-rawlejuglal.c9users.io/8170</span></li>
+						<li><span class='bg-danger'>www.rawlejuglal.me/freecodecamp/urlShortener/www.google.com</span></li>
 					</ul>
 	    	</div>
 			
 	 		<div class="exampleOutput">
 	 			<h2>Example creation output</h2>
-		 		<span class='bg-danger'>{ "original_url":"https://url-shortener-microservice-rawlejuglal.c9users.io/https://www.google.com", "short_path":"https://url-shortener-microservice-rawlejuglal.c9users.io/s/8170" }</span>
+		 		<span class='bg-danger'>{ "long_url":"www.google.com", "short_id":"8170", "short_path":"/s/8170", "_id":"&ltrandom sequence&gt" }</span>
 				<hgroup>
 					<h2>Usage:</h2>
-		 			<span class='bg-danger'>https://url-shortener-microservice-rawlejuglal.c9users.io/s/8170</span>
+		 			<span class='bg-danger'>www.rawlejuglal.me/freecodecamp/s/8170</span>
 					<h2>Will redirect to:</h2>
 		 			<span class='bg-danger'>https://www.google.com/</span>
 				</hgroup>
